--- a/common/package.json
+++ b/common/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "@suyash0007/common",
+  "version": "2.0.0",
+  "main": "dist/zod.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "zod": "^3.23.8"
   }
